--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dns": "^0.2.2",
+    "dotenv": "^16.4.3",
+    "express": "^4.18.2",
     "mongoose": "^8.1.2",
-    "shortid": "^2.2.16",
+    "url": "^0.11.3",
     "validator": "^13.11.0"
   },
   "license": "MIT",
